<resources>
    <string name="app_name">Anime Schedule</string>
    <string name="Email">Email</string>
    <string name="Button">Login</string>
    <string name="logout">Logout</string>
    <string name="list_title">TextView</string>
    <string name="list_Status">TextView</string>
    <string name="titleimage">TitleImage</string>
    <string name="airing_tv">Airing - TV</string>
    <string-array name="spinnerarray">
        <item>Winter 2018</item>
        <item>Spring 2018</item>
        <item>Summer 2018</item>
        <item>Fall 2018</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="currently_airing">Currently Airing</string>
    <string name="upcoming">Upcoming</string>
    <string name="leftovers">Leftovers</string>
    <string name="informationInfo">Information</string>
    <string name="episode_list">Episode List</string>
    <string name="description">Description:</string>
    <string name="episode">Episode:</string>
    <string name="season">Season:</string>
    <string name="studio">Studio:</string>
    <string name="duration">Duration:</string>
    <string name="source">Source:</string>
    <string name="rating">Rating:</string>
    <string name="search_anime">Search Anime</string>
</resources>
