<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001926"
    android:orientation="vertical"
    tools:context=".Main">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0D3149"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Popuptheme"
            app:titleTextColor="#FFFFFF" >
            <Spinner
                android:id="@+id/travelType_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:popupBackground="#0D3149"
                android:backgroundTint="#ffffff"/>

        </android.support.v7.widget.Toolbar>

        <com.miguelcatalan.materialsearchview.MaterialSearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:searchBackground="@color/firstcolor"
            android:textColorHint="#FFFFFF"
            android:hint="@string/search_anime"
            android:textColor="@color/textcolor"
            app:searchCloseIcon="@drawable/icon_clear_24dp"
            app:searchBackIcon="@drawable/icon_close_24dp">

        </com.miguelcatalan.materialsearchview.MaterialSearchView>
        </FrameLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <android.support.design.widget.TabLayout
            android:id="@+id/tabsMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="#24B8EF"
            app:tabTextColor="#FFFFFF"
            android:background="#0D3149"
            app:tabTextAppearance="@style/tab_text"
            app:tabIndicatorColor="#24B8EF">

            <android.support.design.widget.TabItem
                android:id="@+id/tabOngoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currently_airing" />
            <android.support.design.widget.TabItem
                android:id="@+id/tabUpComing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming" />
            <android.support.design.widget.TabItem
                android:id="@+id/tabLeft"
                android:layout_width="wrap_content"
                android:fontFamily="@font/adamina"
                android:layout_height="wrap_content"
                android:text="@string/leftovers" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:itemBackground="@color/firstcolor"
        app:itemIconTint="@drawable/icon_colorstate"
        android:layout_gravity="bottom"
        app:menu="@menu/menu_bottomnav"
        app:itemTextColor="@drawable/icon_colorstate">

    </android.support.design.widget.BottomNavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="?attr/actionBarSize">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerviewFilter"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipelayouAiring"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
    <FrameLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Recyclerviewtoday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="05dp"/>

    </FrameLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipelayouUpcoming"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    <FrameLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/RecyclerviewUpcoming"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipelayouLeftover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
    <FrameLayout
        android:id="@+id/container3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/RecyclerviewLeftover"
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_height="match_parent" />
    </FrameLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>
        <LinearLayout
        android:id="@+id/Account"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/logout" />

    </LinearLayout>

    </FrameLayout>
</LinearLayout>