<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001926"
    android:orientation="vertical"
    tools:context=".AnimeInfo">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarStyle"
            app:contentScrim="#0D3149"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Anime Information">

            <ImageView
                android:id="@+id/imgAnimeInfoHeader"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <ProgressBar
                android:id="@+id/progressbarInfoHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/animeInfoToolbar"
                android:layout_width="270dp"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"></android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayoutInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0D3149"
            app:tabIndicatorColor="#24B8EF"
            app:tabSelectedTextColor="#24B8EF"
            app:tabTextAppearance="@style/tab_text"
            app:tabTextColor="#FFFFFF">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationInfo" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episode_list" />
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/RLInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imgAnimeInfo"
                    android:layout_width="151dp"
                    android:layout_height="190dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/imageviewbg"
                    android:contentDescription="@string/titleimage"
                    android:transitionName="imageTransition" />

                <TextView
                    android:id="@+id/InfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="210dp"
                    android:background="#FFFFFF" />

                <TextView
                    android:id="@+id/infoLine2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lblInfoLine"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF" />

                <TextView
                    android:id="@+id/lblInfoTitle"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imgAnimeInfo"
                    android:layout_marginEnd="7dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="7dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/adamina"
                    android:gravity="center_vertical|center_horizontal"
                    android:maxLines="3"
                    android:minLines="1"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/InfoLineGenre"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/lblInfoLineDate"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF" />

                <GridView
                    android:id="@+id/gridViewGenre"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/InfoLineGenre"
                    android:numColumns="1"></GridView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gridViewGenre"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/adamina"
                    android:text="@string/description"
                    android:textColor="#24B8EF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.borjabravo.readmoretextview.ReadMoreTextView
                    android:id="@+id/lblInfoDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gridViewGenre"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/adamina"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:colorClickableText="#24B8EF"
                    app:showTrimExpandedText="true"
                    app:trimCollapsedText="show less"
                    app:trimExpandedText="show more"
                    app:trimLines="7"
                    app:trimMode="trimModeLine" />

                <TextView
                    android:id="@+id/lblInfoEpisodeDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lblInfoDescription"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/adamina"
                    android:text="@string/episode"
                    android:textColor="#24B8EF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblInfoDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lblInfoEpisodeDes"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/adamina"
                    android:text="@string/duration"
                    android:textColor="#24B8EF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblInfoSeason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@id/lblInfoLine"
                    android:layout_below="@+id/InfoLine"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/adamina"
                    android:text="Season"
                    android:gravity="center"
                    android:textColor="#24B8EF"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblInfoStudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblInfoDuration"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/adamina"
                    android:text="@string/studio"
                    android:textColor="#24B8EF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblInfoSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblInfoStudio"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/adamina"
                    android:text="@string/source"
                    android:textColor="#24B8EF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblInfoRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblInfoSource"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/adamina"
                    android:text="@string/rating"
                    android:textColor="#24B8EF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblInfoEpisode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/lblInfoEpisodeDes"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/adamina"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lblInfoDurationDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/lblInfoEpisode"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/adamina"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lblInfoSeasonDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/lblInfoLine"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/lblInfoSeason"
                    android:gravity="center"
                    android:fontFamily="@font/adamina"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lblInfoStudioDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/lblInfoDurationDes"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/adamina"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lblInfoSourceDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/lblInfoStudioDes"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/adamina"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lblInfoRatingDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/lblInfoSourceDes"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/adamina"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/progressbarInfoImg"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="80dp"/>

                <TextView
                    android:id="@+id/lblInfoScoreDef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/InfoLine"
                    android:layout_toStartOf="@+id/lblInfoLine"
                    android:fontFamily="@font/adamina"
                    android:layout_marginTop="16dp"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:text="9.7" />
                <TextView
                    android:id="@+id/lblInfoScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lblInfoScoreDef"
                    android:fontFamily="@font/adamina"
                    android:textColor="@color/thirdcolor"
                    android:layout_toStartOf="@id/lblInfoLine"
                    android:gravity="center"
                    android:layout_marginTop="-10dp"
                    android:textSize="15sp"
                    android:text="Score" />

                <ProgressBar
                    android:id="@+id/horizontalprogress"
                    android:background="#0D3149"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_below="@+id/infoLine2"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/lblInfoLineDate"
                    android:layout_width="1dp"
                    android:layout_height="29dp"
                    android:layout_below="@+id/horizontalprogress"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"
                    android:background="#FFFFFF" />

                <TextView
                    android:id="@+id/lblInfoLine"
                    android:layout_width="1dp"
                    android:layout_height="90dp"
                    android:layout_below="@+id/InfoLine"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF" />

                <TextView
                    android:id="@+id/lblInfoStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/adamina"
                    android:layout_below="@id/horizontalprogress"
                    android:layout_marginTop="10dp"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:layout_toStartOf="@+id/lblInfoLineDate"
                    android:text="Start: January 5, 2018" />

                <TextView
                    android:id="@+id/lblInfoEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/lblInfoLineDate"
                    android:layout_below="@+id/horizontalprogress"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:fontFamily="@font/adamina"
                    android:text="End: January 5, 2018"
                    android:textColor="#FFFFFF" />

            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>