<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#0D3149"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgAnime"
                android:layout_width="106dp"
                android:layout_height="136dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-5dp"
                android:background="@drawable/imageviewbg"
                android:contentDescription="@string/titleimage"
                android:transitionName="imageTransition" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_alignLeft="@+id/imgAnime"
                android:layout_marginLeft="101dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblTitlecard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/adamina"
                    android:maxLines="2"
                    android:minLines="1"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lblStatuscard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/adamina"
                    android:text="@string/airing_tv"
                    android:textAlignment="center"
                    android:textColor="@color/cardview_light_background" />

                <TextView
                    android:id="@+id/lineCard"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/lblStatuscard"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/imgAnime"
                    android:background="#FFFFFF" />

                <TextView
                    android:id="@+id/lblTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/adamina"
                    android:lineSpacingExtra="2dp"
                    android:lines="2"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/lineCard2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/imgAnime"
                android:layout_centerHorizontal="true"
                android:background="#FFFFFF" />

            <TextView
                android:id="@+id/lblDescriptionCard"
                android:layout_width="337dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imgAnime"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/adamina"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="3"
                android:minLines="1"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressbarcard"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:visibility="gone" />
    </android.support.v7.widget.CardView>

</LinearLayout>